ClientApp/styles/studyMode.css
@import url("./commonStyles.css");

#button-cont button {
    background-color: #85d8e8;
    height: 130px;
    width: 550px;

    font-size: 40px;
    font-weight: 400;
    line-height: 50px;
    letter-spacing: 0em;
    text-align: center;
}

#gatete {
    position: fixed;
    bottom: -10px;
    right: 10px;
}

